testsuite/tests/typecheck/should_fail/T8262.stderr

T8262.hs:5:15: error:
    Couldn't match kind ‘*’ with ‘#’
    When matching types
      a0 :: *
      Int# :: #
    Relevant bindings include
      foo :: t0 -> Maybe a0 (bound at T8262.hs:5:1)
    In the first argument of ‘Just’, namely ‘(1#)’
    In the expression: Just (1#)
    In an equation for ‘foo’: foo x = Just (1#)
